--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,6 +80,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:onClick="LoadResult"
             android:text="@string/btn_search"
             app:layout_constraintEnd_toStartOf="@+id/btn_clear"
             app:layout_constraintHorizontal_bias="0.47"
@@ -95,6 +96,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:onClick="BtnClear"
             android:text="@string/clear_bd"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_search"
