--- a/app/src/main/res/layout/layout_result.xml
+++ b/app/src/main/res/layout/layout_result.xml
@@ -86,7 +86,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
-            android:background="@color/black"
+            android:background="@color/grey"
             android:focusable="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
