--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,136 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
+    android:id="@+id/viewIndex"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/toolBar"
-        layout="@layout/tool_bar" />
-
-
-    <ScrollView
-        android:id="@+id/viewIndex"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintIndex"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="-178dp"
+        tools:layout_editor_absoluteY="-59dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintIndex"
+        <include
+            android:id="@+id/toolBar"
+            layout="@layout/tool_bar" />
+
+        <LinearLayout
+            android:id="@+id/layoutInputs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="-178dp"
-            tools:layout_editor_absoluteY="-59dp">
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/toolBar">
 
-            <LinearLayout
-                android:id="@+id/layoutInputs"
+            <TextView
+                android:id="@+id/txt_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="@string/app_name"
+                android:textSize="25sp" />
+
+            <ImageView
+                android:id="@+id/image_makeup"
+                android:layout_width="290dp"
+                android:layout_height="186dp"
+                android:layout_marginTop="30dp"
+                android:contentDescription="@string/tip_image"
+                android:foregroundGravity="center_vertical|center|center_horizontal"
+                app:srcCompat="@drawable/makeup" />
+
+            <EditText
+                android:id="@+id/edit_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:autofillHints=""
+                android:ems="10"
+                android:hint="@string/edit_type"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/edit_brand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:autofillHints=""
+                android:ems="10"
+                android:hint="@string/edit_marca"
+                android:inputType="textPersonName" />
+
+            <Button
+                android:id="@+id/btn_search"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="25dp"
+                android:onClick="LoadResult"
+                android:text="@string/btn_search"
+                android:textColorHighlight="#FFFFFF" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/layoutResult"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolBar">
+
+            <Button
+                android:id="@+id/button"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="15dp"
+                android:onClick="returnInputs"
+                android:text="@string/return_search"
+                app:icon="@drawable/ic_return_home" />
+
+            <TextView
+                android:id="@+id/txt_result"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="@string/title_result"
+                android:textSize="25sp"
+                android:visibility="visible" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:visibility="visible"
+                tools:listitem="@layout/layout_result">
 
-                <TextView
-                    android:id="@+id/txt_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:text="@string/app_name"
-                    android:textSize="25sp" />
+            </androidx.recyclerview.widget.RecyclerView>
+        </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/image_makeup"
-                    android:layout_width="290dp"
-                    android:layout_height="186dp"
-                    android:layout_marginTop="30dp"
-                    android:contentDescription="@string/tip_image"
-                    android:foregroundGravity="center_vertical|center|center_horizontal"
-                    app:srcCompat="@drawable/makeup" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <EditText
-                    android:id="@+id/edit_type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:autofillHints=""
-                    android:ems="10"
-                    android:hint="@string/edit_type"
-                    android:inputType="textPersonName" />
-
-                <EditText
-                    android:id="@+id/edit_brand"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:autofillHints=""
-                    android:ems="10"
-                    android:hint="@string/edit_marca"
-                    android:inputType="textPersonName" />
-
-                <Button
-                    android:id="@+id/btn_search"
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginBottom="25dp"
-                    android:onClick="LoadResult"
-                    android:text="@string/btn_search"
-                    android:textColorHighlight="#FFFFFF" />
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:id="@+id/layoutResult"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:orientation="vertical"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/layoutInputs">
-
-                <Button
-                    android:id="@+id/button"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center|start"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:onClick="returnInputs"
-                    android:text="@string/return_search"
-                    app:icon="@drawable/ic_return_home" />
-
-                <TextView
-                    android:id="@+id/txt_result"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
-                    android:gravity="center"
-                    android:text="@string/title_result"
-                    android:textSize="25sp"
-                    android:visibility="visible" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    tools:listitem="@layout/layout_result">
-
-                </androidx.recyclerview.widget.RecyclerView>
-            </LinearLayout>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
-
-</LinearLayout>
+</ScrollView>
