--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -11,9 +11,9 @@
     android:elevation="4dp"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    tools:targetApi="lollipop"
     app:menu="@menu/menu_main"
     app:titleTextColor="@color/white_light"
-    app:layout_collapseMode="pin" >
+    app:layout_collapseMode="pin"
+    tools:targetApi="lollipop">
 
 </androidx.appcompat.widget.Toolbar>
